# microservices

backend/: Pipfile  config.yaml  extensions.py
backend/flask_app/: __init__.py  database.py
backend/flask_app/routes/: __init__.py  user_create_routes.py
database_grpc/db_grpc/: config.yaml  db_service.proto  pyproject.toml
database_grpc/db_grpc/db_grpc/: mongo_server.py
